LU-20554 quota: preserve partial OST usage

lov_quotactl() accumulates quota usage from reachable OSTs and stores
the subtotal in dqb_curspace even when querying another target fails.
quotactl_ioctl() currently ignores this subtotal for errors that are
not explicitly handled, so lfs quota may report only MDT usage.

Always copy dqb_curspace returned by lov_quotactl(), but set QIF_SPACE
only when all expected OST quota queries succeed. This reports usage
from reachable OSTs and MDTs while retaining brackets to mark
incomplete results.
For example, with an unavailable OST, lfs quota now reports:

Filesystem     used  bquota  blimit  bgrace ...
   /lusfs/ [105.3G]    200G    200G       - ...

Some errors happened when getting quota info. Some devices may be
not working or deactivated. The data in "[]" is inaccurate.

The brackets make it clear that the displayed usage is incomplete,
while 105.3G includes usage reported by the reachable OSTs.

Remove the obsolete special handling for -EREMOTEIO. Commit
001b8dbfacb7 ("LU-3963 cleanup: C89 and build cleanups") changed
lov_quotactl() to return -ENETDOWN when an expected OST is inactive,
making the special case unreachable.

Add sanity-quota test_16c to verify that usage from a reachable OST is
preserved and marked incomplete while another OST is unavailable.

Fixes: 001b8dbfacb7 ("LU-3963 cleanup: C89 and build cleanups")
Test-Parameters: testlist=sanity-quota env=ONLY=16c
Signed-off-by: Sergey Noskov <sergey.noskov.sn@gmail.com>
Change-Id: I17252ef34ff32dbdd0561c1570ce66f31cacfb87
Reviewed-on: https://review.whamcloud.com/c/fs/lustre-release/+/67911
Reviewed-by: Oleg Drokin <green@whamcloud.com>
Tested-by: jenkins <devops@whamcloud.com>
Reviewed-by: Keguang Xu <kxu@ddn.com>
Tested-by: Maloo <maloo@whamcloud.com>
Reviewed-by: Andreas Dilger <adilger@thelustrecollective.com>
Reviewed-by: Marc Vef <mvef@whamcloud.com>